pointer to remove image and download folder

--- a/index.html
+++ b/index.html
@@ -58,27 +58,27 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="./images/bcm1.jpg"" style="width:100%;">
+					<img src="bcm1.jpg"" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/chickens-napping.jpg" style="width:100%;">
+					<img src="chickens-napping.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/snack-tim3.jpg" style="width:100%;">
+					<img src="snack-tim3.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/shirley-cuddles2.jpg" style="width:100%;">
+					<img src="shirley-cuddles2.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/snack-time2.jpg" style="width:100%;">
+					<img src="images/snack-time2.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/chik222.jpg" style="width:100%;">
+					<img src="images/chik222.jpg" style="width:100%;">
 				</div>
 			</div>
 
@@ -131,12 +131,12 @@
 					<p>Egg colors vary by breed and can range from bright blues to dark browns (sometimes reddish) to sage greens to whites or tans... or anywhere in between. If you are building your flock to achieve a certain color of egg, you'll want to do some research into what breeds generate the different colors.  Something that we have enjoyed is trying to create our natural "easter basket".  As you can see from the image below, we are pretty close.  
 					</p>
 					</br>
-					<img src="./images/egg-colors1.jpg">
+					<img src="egg-colors1.jpg">
 				</br>
 				<p>Another thing to note beyond the color of the egg, is the shade of color.  If you were to type "Chicken egg colors" into a browser, you will see that there are many shades of each color.  It is quite a sport to breed certain colors.  We just took our chickens for what their breed likely laid and hoped for the best.  Even if you were to breed your perfect color of egg, you can see from the image below that the egg color throughout the lifecycle of the chicken can change.  In this case, it was the beginning changes as a chicken began to lay.  This is called "getting her paint on".  Additionally, the eggs may become lighter or more speckled with time.   
 				</p>
 				</br>
-				<img src="./images/egg-colors9.jpg">
+				<img src="egg-colors9.jpg">
 				</div>
 			</div>
 		</div>
@@ -146,7 +146,7 @@
 		<div class="row">
 			<div class="col-lg-12 do-my-border">
 			<h3>The Life Of Hens</h3>
-			<p>The "Compassion in world farming" organization (ciwf.org) put our a really great PDF on the life of hens that can be downloaded<a href="./downloads/The-life-of-laying-hens.PDF" download> HERE</a></p>
+			<p>The "Compassion in world farming" organization (ciwf.org) put our a really great PDF on the life of hens that can be downloaded<a href="The-life-of-laying-hens.PDF" download> HERE</a></p>
 			</div>
 		</div>
 	</div>
