--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 				</div>
 
 				<div class="item">
-					<img src="images/snack-time2.jpg" style="width:100%;">
+					<img src="snack-time2.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="images/chik222.jpg" style="width:100%;">
+					<img src="chik222.jpg" style="width:100%;">
 				</div>
 			</div>
 
@@ -146,7 +146,7 @@
 		<div class="row">
 			<div class="col-lg-12 do-my-border">
 			<h3>The Life Of Hens</h3>
-			<p>The "Compassion in world farming" organization (ciwf.org) put our a really great PDF on the life of hens that can be downloaded<a href="The-life-of-laying-hens.PDF" download> HERE</a></p>
+			<p>The "Compassion in world farming" organization (ciwf.org) put our a really great PDF on the life of hens that can be downloaded <a href="The-life-of-laying-hens.PDF" download> HERE</a></p>
 			</div>
 		</div>
 	</div>
