--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 		<div class="row">
 			<div class="col-lg-12 do-my-border">
 			<h3>The Life Of Hens</h3>
-			<p>The "Compassion in world farming" organization (ciwf.org) put our a really great PDF on the life of hens that can be downloaded <a href="The-life-of-laying-hens.PDF" download> HERE</a></p>
+			<p>The "Compassion in world farming" organization (ciwf.org) put our a really great PDF on the life of hens that can be downloaded <a href="The-life-of-laying-hens.pdf" download> HERE</a></p>
 			</div>
 		</div>
 	</div>
