--- a/adoption.html
+++ b/adoption.html
@@ -66,23 +66,23 @@
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner">
 								<div class="item active">
-									<img src="./images/a1.jpg"" style="width:100%;">
+									<img src="a1.jpg"" style="width:100%;">
 								</div>
 
 								<div class="item">
-									<img src="./images/a2.jpg" style="width:100%;">
+									<img src="a2.jpg" style="width:100%;">
 								</div>
 
 								<div class="item">
-									<img src="./images/a3.jpg" style="width:100%;">
+									<img src="a3.jpg" style="width:100%;">
 								</div>
 
 								<div class="item">
-									<img src="./images/a4.jpg" style="width:100%;">
+									<img src="a4.jpg" style="width:100%;">
 								</div>
 
 								<div class="item">
-									<img src="./images/a5.jpg" style="width:100%;">
+									<img src="a5.jpg" style="width:100%;">
 								</div>
 
 							</div>
