--- a/babyChicks.html
+++ b/babyChicks.html
@@ -51,7 +51,7 @@
 			<div class="col-lg-4 do-my-border">
 				<div> 
 					<h3>Meet Ruby</h3>
-					<img src="./images/ruby1.jpg">	
+					<img src="ruby1.jpg">	
 				</div>
 			</div>
 			<div class="col-lg-4 do-my-border">
@@ -62,14 +62,14 @@
 						<li>Egg Color = Light Brown</li>	
 					</br>
 					</ul>
-					<img src="./images/ruby22.jpg">
+					<img src="ruby22.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 do-my-border">
 				<div> 
 					</br>
 					</br>
-					<img src="./images/ruby3.jpg">	
+					<img src="ruby3.jpg">	
 					</br>
 					</br>
 					</br>
@@ -85,7 +85,7 @@
 			<div class="col-lg-4 do-my-border">
 				<div> 
 					<h3>Meet Martha</h3>
-					<img src="./images/martha1.jpg">	
+					<img src="martha1.jpg">	
 					</br>
 				</div>
 			</div>
@@ -97,14 +97,14 @@
 						<li>Egg Color = Blue</li>	
 					</br>
 					</ul>
-					<img src="./images/martha2.jpg">
+					<img src="martha2.jpg">
 				</div>
 			</div>
 			<div class="col-lg-4 do-my-border">
 				<div> 
 					</br>
 					</br>
-					<img src="./images/martha3.jpg">	
+					<img src="martha3.jpg">	
 					</br>
 					</br>
 				</div>
