--- a/incubation.html
+++ b/incubation.html
@@ -70,35 +70,35 @@
 			<!-- Wrapper for slides -->
 			<div class="carousel-inner">
 				<div class="item active">
-					<img src="./images/b1.jpg"" style="width:100%;">
+					<img src="b1.jpg"" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/b2.jpg" style="width:100%;">
+					<img src="images/b2.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/b3.jpg" style="width:100%;">
+					<img src="b3.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/b4.jpg" style="width:100%;">
+					<img src="b4.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/b5.jpg" style="width:100%;">
+					<img src="b5.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/b6.jpg" style="width:100%;">
+					<img src="b6.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/b7.jpg" style="width:100%;">
+					<img src="b7.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
-					<img src="./images/b8.jpg" style="width:100%;">
+					<img src="b8.jpg" style="width:100%;">
 				</div>
 			</div>
 
