--- a/incubation.html
+++ b/incubation.html
@@ -74,7 +74,7 @@
 				</div>
 
 				<div class="item">
-					<img src="images/b2.jpg" style="width:100%;">
+					<img src="b2.jpg" style="width:100%;">
 				</div>
 
 				<div class="item">
